objects/AccountPlanLink__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>AccountPlan__c</referenceTo>
        <relationshipLabel>Account Plans Links</relationshipLabel>
        <relationshipName>Account_Plans_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans Links</relationshipLabel>
        <relationshipName>Account_Plans_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CustomTimestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CustomTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Plan Link</label>
    <nameField>
        <displayFormat>AP-{0000000000}</displayFormat>
        <label>Account Plan Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plans Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>